--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "dependencies": {
     "@types/express": "^4.16.1",
-    "express": "^4.16.4"
+    "@types/mocha": "^9.1.0",
+    "dayjs": "^1.10.7",
+    "express": "^4.16.4",
+    "ws": "^8.5.0"
   }
 }
